<resources>
  <string name="app_name">Android Animations</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <!--Menu-->
  <string name="action_settings">Settings</string>
  <string name="welcome">Welcome</string>
  <string name="drag_me">Drag me !</string>
  <string name="damping_ratio">Damping ratio\n%s</string>
  <string name="stiffness">Stiffness\n%s</string>
  <string name="friction">Friction\n%s</string>
  <string name="interpolators">Interpolators</string>
  <string name="property_animations">Property Animations</string>
  <string name="physics_based_animations">Physics-based Animations</string>
  <string name="transitions_animations">Transition Animations</string>
  <string name="static_animations">Static Animations</string>
  <string name="fling_list_animation">Fling List Animation</string>
  <string name="shared_element_animation">Shared Element Animation</string>
  <string name="lottie_animation">Lottie Animation</string>
  <string name="spring_animation">Spring Animation</string>

  <!--Interpolators-->
  <string name="linear_interpolator">Linear Interpolator</string>
  <string name="accelerate_interpolator">Accelerate Interpolator</string>
  <string name="decelerate_interpolator">Decelerate Interpolator</string>
  <string name="accelerate_decelerate_interpolator">Accelerate Decelerate Interpolator</string>
  <string name="anticipate_interpolator">Anticipate Interpolator</string>
  <string name="anticipate_overshoot_interpolator">Anticipate Overshoot Interpolator</string>
  <string name="overshoot_interpolator">Overshoot Interpolator</string>
  <string name="bounce_interpolator">Bounce Interpolator</string>
  <string name="fast_out_linear_in_interpolator">Fast Out Linear In Interpoloator</string>
  <string name="fast_out_slow_in_interpolator">Fast Out Slow In Interpolator</string>
  <string name="linear_out_slow_in_interpolator">Linear Out Slow In Interpolator</string>
  <string name="cycle_interpolator">Cycle Interpolator</string>


  <string name="shared_element_transition_name">welcome_transition</string>
  <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sodales imperdiet fringilla. Vivamus hendrerit ultrices turpis eu vehicula. Ut vel interdum lacus. Proin congue ullamcorper rhoncus. Fusce porttitor libero sed libero accumsan fringilla. Donec mi nulla, sollicitudin at arcu at, faucibus sagittis dui. Fusce in porttitor turpis, a interdum nulla. Donec congue, ex eget fermentum sodales, nulla nulla luctus massa, at ultricies magna orci ac ligula. Maecenas nisl dui, bibendum id aliquet laoreet, congue in ex. Pellentesque vehicula ullamcorper mi ut condimentum. Vestibulum vel sem et sem porta efficitur.
Suspendisse eleifend risus mollis massa viverra vestibulum. Nam ut ipsum quis lectus malesuada venenatis. Nulla facilisi. Cras a commodo justo. Sed felis erat, varius ac semper et, scelerisque quis leo. Mauris non quam eu ligula pretium dignissim. Aenean ut elementum ipsum. Mauris iaculis urna molestie, placerat metus tempus, porta orci. Proin nibh urna, ultricies id magna quis, bibendum lacinia ipsum. Suspendisse nec convallis felis, sit amet sodales nibh. Donec convallis, leo at aliquet ultrices, ligula erat venenatis ante, in gravida augue justo ac ante. Maecenas ac lacus non nisl lobortis bibendum. Sed molestie sapien ex, eget sodales urna ultricies non. Mauris eget pellentesque augue, vitae condimentum lacus. In eget pulvinar urna.
Donec massa nibh, vestibulum eget sapien at, pulvinar porttitor tellus. Nunc iaculis nisi non congue fringilla. Maecenas egestas aliquet metus ac varius. Suspendisse facilisis sapien a magna volutpat rutrum. Curabitur vel purus libero. Aliquam erat volutpat. Vestibulum posuere tristique turpis, vitae varius augue dignissim sed. Ut tellus tellus, finibus ac mattis sit amet, accumsan eget nulla. Donec vitae vulputate lectus. Donec id quam mattis, lacinia velit eu, egestas turpis. Curabitur fermentum facilisis nisl ac porta. Praesent quis sagittis odio. Sed a cursus augue, et euismod felis. Sed quis quam ac mauris vestibulum viverra. Cras laoreet aliquam lectus eu condimentum. Donec non malesuada est, ut accumsan ipsum.
Aenean at eros tincidunt, dignissim sem id, fringilla odio. Mauris non felis ex. Aenean fringilla diam neque, eu volutpat lorem cursus imperdiet. Vivamus euismod rutrum malesuada. Nunc sodales tempor est sit amet condimentum. Donec et commodo tellus. Nullam fermentum dapibus tellus vitae gravida. Aliquam non sem ultricies, ultricies purus eget, suscipit dolor. Praesent et consectetur felis. Duis id consectetur ex, ac placerat metus. Proin molestie justo massa, varius bibendum purus sodales sit amet. Fusce facilisis, dui id gravida dictum, nisi enim bibendum est, sit amet porttitor mauris elit a risus. Aliquam sed cursus ligula. Duis eget tempor neque.
Etiam non metus vehicula, facilisis nisl id, vehicula dolor. Vivamus sed viverra arcu. Integer congue enim a magna placerat tempor. Nullam dictum sem non molestie scelerisque. Nunc congue imperdiet erat, vitae euismod mauris pharetra non. Curabitur id ante ultricies, dignissim orci pretium, varius nisi. Nulla eu augue et mi sodales egestas non blandit dolor. Nulla tellus ipsum, cursus sed odio vel, pretium cursus ligula. Sed eu efficitur lectus. Pellentesque vitae nisi mollis, convallis metus eleifend, tincidunt tortor.</string>
  <string name="property_animation">Property Animation</string>
  <string name="android_animation">Android Animation</string>
    <string name="position">Position</string>
  <string name="rotation">Rotation</string>
    <string name="size">Size</string>
  <string name="alpha">alpha</string>
</resources>
