<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_welcome"
        android:icon="@drawable/welcome"
        android:title="@string/welcome"
        />
  </group>

  <item android:title="@string/android_animation">
    <menu>
      <item android:checkable="true"
          android:id="@+id/nav_view_animation"
          android:icon="@drawable/transition"
          android:title="@string/property_animation"/>
    </menu>
  </item>

  <item android:title="@string/property_animations">
    <menu>
      <item
          android:checkable="true"
          android:id="@+id/nav_interpolator"
          android:icon="@drawable/parabolic"
          android:title="@string/interpolators"/>

    </menu>

  </item>

  <item android:title="@string/physics_based_animations">
    <menu>
      <item
          android:checkable="true"
          android:id="@+id/nav_spring"
          android:icon="@drawable/atomic"
          android:title="@string/spring_animation"/>
      <item
          android:checkable="true"
          android:id="@+id/nav_fling"
          android:icon="@drawable/scroll"
          android:title="@string/fling_list_animation"/>
    </menu>

  </item>


  <item android:title="@string/transitions_animations">
    <menu>
      <item
          android:checkable="true"
          android:id="@+id/nav_shared_element"
          android:icon="@drawable/transition"
          android:title="@string/shared_element_animation"/>
    </menu>
  </item>

  <item android:title="@string/static_animations">
    <menu>
      <item
          android:checkable="true"
          android:id="@+id/nav_lottie"
          android:icon="@drawable/transition"
          android:title="@string/lottie_animation"/>
    </menu>
  </item>

</menu>
