<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <android.support.v7.widget.CardView
      android:id="@+id/property_card_view"
      android:layout_width="124dp"
      android:layout_height="124dp"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="16dp"
      app:cardElevation="2dp"
      >

    <android.support.v7.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/md_blue_300"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        >
      <android.support.v7.widget.CardView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_centerInParent="true"
          android:layout_gravity="center"
          app:cardBackgroundColor="@color/md_indigo_700"
          app:cardCornerRadius="4dp"
          app:cardElevation="2dp"
          >
      </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
  </android.support.v7.widget.CardView>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="16dp"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

      <Button
          android:id="@+id/property_position_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorAccent"
          android:text="@string/position"
          android:textColor="@color/md_white_1000"
          />

      <Button
          android:id="@+id/property_rotation_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorAccent"
          android:text="@string/rotation"
          android:textColor="@color/md_white_1000"
          />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

      <Button
          android:id="@+id/property_size_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorAccent"
          android:text="@string/size"
          android:textColor="@color/md_white_1000"
          />

      <Button
          android:id="@+id/property_alpha_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorAccent"
          android:text="@string/alpha"
          android:textColor="@color/md_white_1000"
          />

    </LinearLayout>
  </LinearLayout>

</RelativeLayout>