<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <FrameLayout
      android:id="@+id/spring_layout_drag"
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:layout_centerInParent="true">

    <ImageView
        android:id="@+id/spring_ring_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/spring_ring_drawable"
        android:alpha="0.8"/>

    <android.support.v7.widget.CardView
        android:id="@+id/spring_card_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        >
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/drag_me"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            style="@style/TextViewThin"
            />

      </FrameLayout>
    </android.support.v7.widget.CardView>

  </FrameLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:padding="16dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/damping_ratio_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/damping_ratio"
          android:textSize="14sp"
          style="@style/TextViewThin"
          />

      <SeekBar
          android:id="@+id/damping_ratio_seekbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/stiffness_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/stiffness"
          android:textSize="14sp"
          style="@style/TextViewThin"
          />

      <SeekBar
          android:id="@+id/stiffness_seekbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>